--- a/src/assets/sass/common/header.scss
+++ b/src/assets/sass/common/header.scss
@@ -16,6 +16,7 @@
 
         @media (max-width: $tablet) {
             display: none;
+
         }
     }
 
@@ -27,11 +28,9 @@
             width: 32px;
             height: 32px;
             background: red;
+            position: relative;
+            z-index: 100;
         }
-    }
-
-    &__nav-input {
-        display: none;
     }
 
     &__nav-link {
@@ -53,6 +52,23 @@
 
         &--active {
             border-bottom: 1px solid $color-black;
+        }
+    }
+
+    &__nav-input {
+        display: none;
+
+        &:checked~.header__nav-row {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: fixed;
+            background-color: $color-grey;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 99;
         }
     }
 }
