--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: $sub-fonts;
 }
 
 .container {
@@ -11,4 +11,20 @@ body {
 .logo {
     max-width: 134px;
     height: 11px;
+}
+
+.wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.hover-link-animation {
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    display: block;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
