--- a/src/assets/sass/common/footer.scss
+++ b/src/assets/sass/common/footer.scss
@@ -1,54 +1,46 @@
 .footer {
     background-color: $color-grey;
-    padding: 128px 0 141px;
+    padding: 128px 0px 141px;
     margin-top: auto;
-
-    @media (max-width: $tablet) {
-        padding: 64px 0 68px;
+    
+    @media(max-width:$tablet){
+        padding: 64px 0px 68px;
     }
 
-    &__container {
+    &__container{
         display: flex;
         justify-content: space-between;
-
-        @media (max-width: $tablet) {
+        @media(max-width:$tablet){
             flex-direction: column;
             gap: 48px;
         }
     }
-
-    &__title {
+    &__title{
         margin-bottom: 32px;
-
-        @media (max-width: $tablet) {
+        @media(max-width:$tablet){
             margin-bottom: 18px;
         }
     }
-
-    &__contact {
+    &__contact{
         margin-bottom: 16px;
-
-        &:last-child {
+        &:last-child{
             margin-bottom: 0;
         }
     }
-
-    &__social-row {
+    &__social-row{
         display: flex;
         flex-direction: column;
         gap: 24px;
     }
-
-    &__content {
+    &__content{
         display: flex;
         flex-direction: column;
     }
-
-    &__description {
+    &__description{
         align-self: flex-end;
-
-        @media (max-width: $tablet) {
+        @media(max-width:$tablet){
             align-self: flex-start;
+            
         }
-    }
+    }   
 }
