--- a/src/assets/sass/common/header.scss
+++ b/src/assets/sass/common/header.scss
@@ -16,20 +16,42 @@
 
         @media (max-width: $tablet) {
             display: none;
-
         }
     }
 
     &__nav-label {
-        display: none;
-
         @media (max-width: $tablet) {
             display: block;
             width: 32px;
             height: 32px;
-            background: red;
+
             position: relative;
             z-index: 100;
+        }
+    }
+    &__gam-img {
+        display: none;
+
+        @media (max-width: $tablet) {
+            display: block;
+        }
+
+    }
+
+    &__nav-input {
+        display: none;
+
+        &:checked~.header__nav-row {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: fixed;
+            background-color: $color-grey;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 99;
         }
     }
 
@@ -52,23 +74,6 @@
 
         &--active {
             border-bottom: 1px solid $color-black;
-        }
-    }
-
-    &__nav-input {
-        display: none;
-
-        &:checked~.header__nav-row {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            position: fixed;
-            background-color: $color-grey;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            z-index: 99;
         }
     }
 }
