--- a/src/assets/sass/variables/_fonts.scss
+++ b/src/assets/sass/variables/_fonts.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Red+Hat+Display:wght@400;500;600&display=swap');
 
-$main-fonts: 'Red Hat Display', sans-serif;
-$sub-fonts: 'Lato', sans-serif;
+$main-fonts:'Red Hat Display', sans-serif;
+$sub-fonts:'Lato', sans-serif;
 
 .title {
     font-family: $main-fonts;
@@ -10,23 +10,52 @@ $sub-fonts: 'Lato', sans-serif;
     line-height: 64px;
     letter-spacing: 0.05em;
     color: $color-black;
-
-    @media (max-width: $tablet) {
+    
+    @media (max-width: $tablet){
         font-size: 33px;
         line-height: 50px;
     }
+    
+}
+
+.text{
+        font-family: $sub-fonts;
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 32px;
+        letter-spacing: 0.05em;
+        color: $color-grey700;
+}
+
+.h3{
+    font-family: $sub-fonts;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 166%;
+    letter-spacing: 0.1em;
+    color:$color-grey700;
+
+}
+
+.h4{
+    font-family: $sub-fonts;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 32px;
+    letter-spacing: 0.05em;
+    color: $color-black;
 }
 
 .h6 {
     font-family: $sub-fonts;
     font-weight: 400;
     font-size: 16px;
-    line-height: 27px;
+    line-height: 166%;
     letter-spacing: 0.1em;
     color: $color-black;
 }
 
-.h9 {
+.h9{
     font-family: $sub-fonts;
     font-weight: 400;
     font-size: 12px;
