--- a/src/assets/sass/common/form.scss
+++ b/src/assets/sass/common/form.scss
@@ -7,13 +7,13 @@
         font-size: 16px;
         line-height: 27px;
         letter-spacing: 0.05em;
-        color: $color-grey-700;
+        color: $color-grey700;
         display: block;
 
     }
 
     &__input {
-        color: $color-grey-500;
+        color: $color-grey500;
         font-size: 12px;
         line-height: 20px;
         letter-spacing: 0.1em;
@@ -23,16 +23,14 @@
         border-bottom: 1px solid $color-black;
         cursor: pointer;
 
-        &:focus {
-            border-bottom: 1px solid blue;
-        }
+    
 
         &:hover {
-            border-bottom: 1px solid green;
+            border-bottom: 1px solid rgb(0, 0, 0);
         }
 
         &::placeholder {
-            color: $color-grey-500;
+            color: $color-grey500;
             font-size: 12px;
             line-height: 20px;
             letter-spacing: 0.1em;
