--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -24,5 +24,6 @@
 @import './pages/home.scss';
 @import './pages/about.scss';
 @import './pages/works.scss';
+@import './pages/fashion.scss';
 @import './pages/contact.scss';
 // Pages Style End
