--- a/src/assets/sass/pages/fashion.scss
+++ b/src/assets/sass/pages/fashion.scss
@@ -11,9 +11,60 @@
         justify-content: space-between;
         align-items: center;
     }
-       
-}
+      
+    &__title{
+        margin-top: 45px;
+    }
+
+    &__img{
+      margin-top: 55px;
+    }
+
+   &__description{
+    margin-top: 130px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    @media(max-width:$tablet){
+        flex-direction: column;
+        gap: 40px;
+    }
+   }
+
+
+   &__overviev{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 40px;
+   }
+
+   &__specification{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 15px;}
+
+    &__section{
+        display: flex;
+        justify-content: space-between;
+        margin-top:135px; 
+    }
+
+    &__text{
+        margin-top: 50px;
+        gap: 24px;
+    }
     
+    &__section:last-child{
+        margin-bottom: 120px;
+        @media(max-width:$tablet){
+            margin-bottom: 0px;
+        }
+    }
+}
+   
 
 
 
