--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -21,9 +21,11 @@
 // components end
 
 // Pages Style
+@import './pages/404.scss';
 @import './pages/home.scss';
 @import './pages/about.scss';
 @import './pages/works.scss';
 @import './pages/fashion.scss';
 @import './pages/contact.scss';
+
 // Pages Style End
