--- a/src/assets/sass/variables/_color.scss
+++ b/src/assets/sass/variables/_color.scss
@@ -4,4 +4,5 @@ $color-black: #000000;
 $color-grey:  #F4F4F4;
 $color-grey700: #565656;
 $color-grey500: #7B7B7B; 
+$color-grey300:#CCCCCC;
 $color-white: #FFFFFF;
