--- a/src/assets/sass/variables/_fonts.scss
+++ b/src/assets/sass/variables/_fonts.scss
@@ -75,7 +75,7 @@ $sub-fonts:'Lato', sans-serif;
     font-size: 16px;
     line-height: 166%;
     letter-spacing: 0.1em;
-    color: $color-black;
+    color: $color-grey700;
 }
 
 .h9{
