--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -23,9 +23,9 @@
 // Pages Style
 @import './pages/404.scss';
 @import './pages/home.scss';
-
 @import './pages/about.scss';
 @import './pages/blog.scss';
+@import './pages/blogsec.scss';
 @import './pages/works.scss';
 @import './pages/fashion.scss';
 @import './pages/contact.scss';
