--- a/src/assets/sass/pages/blog.scss
+++ b/src/assets/sass/pages/blog.scss
@@ -1,10 +1,10 @@
 .blog{
-    
+    margin-top: 30px;
     @media(max-width:$tablet){
         padding: 64px 16px;
     }
 
-    padding-top: 96px;
+    padding-top: 90px;
 
     &__container {
         display: flex;
@@ -57,12 +57,12 @@
     }
 
     &__category{
-        width: 50%;
+        width: 47%;
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 60px 0px 60px 0px;
-        gap: 40px;
+        gap: 30px;
         @media(max-width:$tablet){
             
             width: 100%;
