--- a/src/assets/sass/pages/blogsec.scss
+++ b/src/assets/sass/pages/blogsec.scss
@@ -8,20 +8,73 @@
 
     &__container {
         display: flex;
-        justify-content: space-between;
-        flex-direction: column;   
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;  
+        @media(max-width: $tablet){
+            justify-content: space-between; 
+            align-items:baseline
+
+        } 
     }
 
     &__info{
         width: 65%;
+        gap :30px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        transform: translateX(-200px);
+        @media(max-width:$tablet){
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            transform: none;
+        }   
+    }
+
+    &__date{
+        gap: 20px;
         @media(max-width:$tablet){
             display: flex;
             flex-direction: column;
-        }
-        
     }
 
+    }   
 
+    &__img{
+        margin-top: 40px;
+    }
 
+    &__description{
+        width: 60%;
+        margin-top: 40px;
+        gap: 40px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+       
+    }
 
+    &__text{
+        color: black;
+    }
+
+    &__writer{
+        margin-top: 40px;
+        width: 10%;
+        display: flex;
+        justify-content: space-between;
+        text-align: center;  
+        transform: translateX(-280px); 
+    }
+
+    &__social{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        transform: translateX(720px)
+        translateY(-418px);
+       
+    }
 }
