--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -135,10 +135,14 @@
 
             &__item{
                 width: 30%;
+                @media(max-width:$tablet){
+                    flex-direction: column;
+                    width: 100%;
             }
 
         
  }
+}
        
 
 
