--- a/src/assets/sass/pages/blog.scss
+++ b/src/assets/sass/pages/blog.scss
@@ -56,7 +56,26 @@
         color: black;
     }
 
-    &__category{
+    
+}
+
+.post{
+    margin-top: 30px;
+    @media(max-width:$tablet){
+        padding: 64px 16px;
+    }
+
+    padding-top: 90px;
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        
+        
+    }
+
+   &__category{
         width: 47%;
         display: flex;
         justify-content: space-between;
@@ -69,22 +88,8 @@
     }
     }
 
-    &__posts{
-        width: 100%;
-        margin-top: 130px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        
-    }
 
-   
-
-    //     &__texts{
-    //         width: 50%;
-    // }
-
-   &__post{
+    &__card{
         margin-top: 50px;
         width: 100%;
         gap: 30px;
@@ -94,11 +99,9 @@
             flex-direction: column;
             gap: 30px;
         }
-       
-
     }
-    
-    &__posts--text{
+
+    &__text{
         
         display: flex;
         justify-content: space-between;
@@ -110,25 +113,21 @@
        
     }
 
-    &__post--descr{
+    &__descr{
         display: flex;
         justify-content: space-between;
-       
+       margin: 0 auto;
 
     }
 
-    // &__posts--img{
-    //     width: 250;
-    //     height: 250;
-    // }
+   
 
         &__item{
         width: 50%;
-        gap: 20px;
+        gap: 10px;
         display: flex;
         flex-direction: column;
         @media(max-width:$tablet){
-            
             width: 100%;
     }
         }
