--- a/src/assets/sass/pages/works.scss
+++ b/src/assets/sass/pages/works.scss
@@ -1,35 +1,45 @@
-.works{
-    padding: 128px;
+.top{
+    
     @media (max-width: $tablet) {
-        padding: 64px 16px;
+        padding: 0px 16px;
     }
 
 
     
     &__row{
+        margin-top: 120px;
+        gap: 47%;
         display: flex;
         justify-content: space-between;
-        padding-bottom: 128px;
         @media (max-width: $tablet) {
             flex-direction: column;
-            padding-bottom: 48px;
+            padding-bottom: 0px;
         }
         
     }
-    &__title{
-        @media (max-width: $tablet) {
-            padding-bottom: 48px;
-        }
-    }
+    
 
     &__text{
-        width: 541px; 
+        width: 541px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         @media (max-width: $tablet) {
            width: 288px;
         }
            
     }
+}
+
+.works{
+    margin-top: 120px;
+    @media (max-width: $tablet) {
+        padding: 0px 16px;
+    }
+
+
     &__cards{
+        gap: 47%;
         display: flex;
         flex-direction: column;
         gap:48px;
@@ -40,6 +50,8 @@
 
 
     }
+
+
     &__item-img{
         width: 544px;
         @media (max-width: $tablet) {
@@ -50,12 +62,18 @@
     }
 
     &__item{
+        gap: 45%;
         display: flex;
         justify-content: space-between;
         @media (max-width: $tablet) {
         flex-direction: column-reverse;    
          }  
     }
+
+    &__item:last-child{
+        padding-bottom: 120px;
+    }
+
 
     &__item-title{
         color:$color-black;
