--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -23,6 +23,7 @@
 // components end
 
 // Pages Style
+@import './pages/work1.scss';
 @import './pages/404.scss';
 @import './pages/home.scss';
 @import './pages/about.scss';
