--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -27,9 +27,9 @@
 @import './pages/home.scss';
 @import './pages/about.scss';
 @import './pages/blog.scss';
-@import './pages/blogsec.scss';
+@import './pages/blogsec/blogsec.scss';
 @import './pages/works.scss';
-@import './pages/fashion.scss';
+@import './pages/workpages.scss';
 @import './pages/contact.scss';
 
 // Pages Style End
