--- a/src/assets/sass/common/form.scss
+++ b/src/assets/sass/common/form.scss
@@ -1,15 +1,21 @@
 .form {
     display: flex;
     flex-direction: column;
-    gap: 43px;
+    gap: 48px;
 
-    &__tilte {
+    &__modal {
+        max-width: 542px;
+        width: 100%;
+        margin-top: 128px;
+    }
+
+
+    &__title {
         font-size: 16px;
         line-height: 27px;
         letter-spacing: 0.05em;
         color: $color-grey700;
         display: block;
-
     }
 
     &__input {
@@ -17,16 +23,18 @@
         font-size: 12px;
         line-height: 20px;
         letter-spacing: 0.1em;
-        padding: 9px 0;
+        padding: 16px 0px 8px;
         display: block;
         width: 100%;
-        border-bottom: 1px solid $color-black;
+        border-bottom: 2px solid $color-black;
         cursor: pointer;
 
-    
+        // &:focus {
+        //     border-bottom: 2px solid rgb(0, 0, 0);
+        // }
 
         &:hover {
-            border-bottom: 1px solid rgb(0, 0, 0);
+            border-bottom: 2px solid rgb(0, 0, 0);
         }
 
         &::placeholder {
@@ -36,4 +44,5 @@
             letter-spacing: 0.1em;
         }
     }
+
 }
