--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -15,40 +15,32 @@
             }
         }
 
-        &__content{
-            margin-top: 130px;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            flex-direction: column;
-            gap: 20px;
-            @media(max-width:$tablet){
-                
-            }
-            
-        } 
-        
-        &__works{
-            display: flex;
-            justify-content: space-between;
-            gap: 30px;
-        }
-         &__card{
-            width: 10%;
-            display: flex;
-            flex-direction: column;
-        }
-        &__card2{
-            width: 42.50%;
-            display: flex;
-            flex-direction: column;
-            @media(max-width:$tablet){
-             width: 100%;   
-            }
-            
-        }
     }
        
+    .slider{
+        display: flex;
+        gap:30px;
+        overflow: scroll;
+        justify-content: center;
+        margin:128px 100px 120px 100px;
+        @media (max-width: $tablet) {
+            margin:30px 0 50px 0;
+        }
+    
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar{
+            display: none;
+        }
+    
+        &__cart-img{
+            width: 544px;
+            margin-bottom: 16px;
+            @media (max-width: $tablet) {
+                max-width: 257px;
+            }
+        }
+    }
 
         .info{
             gap: 30px;
@@ -103,6 +95,9 @@
             margin-bottom: 100px;
             display: flex;
             justify-content: space-between;
+            @media(max-width:$tablet){
+                margin-bottom: 0;
+            }
             
             
         
