--- a/src/assets/sass/common/header.scss
+++ b/src/assets/sass/common/header.scss
@@ -29,7 +29,7 @@
             z-index: 100;
         }
     }
-    &__gam-img {
+    &__ham-img {
         display: none;
 
         @media (max-width: $tablet) {
