--- a/src/assets/sass/pages/works.scss
+++ b/src/assets/sass/pages/works.scss
@@ -1,7 +1,8 @@
 .top{
-    
+    margin-top: 50px;
     @media (max-width: $tablet) {
         padding: 0px 16px;
+        margin-top: 0;
     }
 
 
