--- a/src/assets/sass/pages/works.scss
+++ b/src/assets/sass/pages/works.scss
@@ -1,3 +1,5 @@
+// top start
+
 .top{
     margin-top: 50px;
     @media (max-width: $tablet) {
@@ -31,6 +33,11 @@
            
     }
 }
+
+// top end
+
+// works start
+
 
 .works{
     margin-top: 120px;
@@ -102,3 +109,5 @@
     }
    
 }
+
+// works end
