--- a/src/assets/sass/pages/blog.scss
+++ b/src/assets/sass/pages/blog.scss
@@ -1,3 +1,5 @@
+// blog start
+
 .blog{
     @media(max-width:$tablet){
         padding: 64px 16px;
@@ -57,6 +59,9 @@
     
 }
 
+// blog end
+
+// post start
 .post{
     margin-top: 30px;
     @media(max-width:$tablet){
@@ -139,3 +144,6 @@
 
    
 }
+
+
+// post end
