--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -1,3 +1,5 @@
+// home start
+
 .home {
         padding: 130px;
     
@@ -16,7 +18,12 @@
         }
 
     }
+
+    // home end
        
+
+    // slider start
+
     .slider{
         display: flex;
         gap:30px;
@@ -41,6 +48,11 @@
             }
         }
     }
+
+    // slider end
+
+
+    // info start
 
         .info{
             gap: 30px;
@@ -89,6 +101,11 @@
         }
     }
  
+    // info end
+
+
+    // post start
+
         .post{
             width: 100%;
             margin-top: 130px;
@@ -178,3 +195,5 @@
  }
 
 }  
+
+// post end
