--- a/src/assets/sass/common/form.scss
+++ b/src/assets/sass/common/form.scss
@@ -27,9 +27,12 @@
         display: block;
         width: 100%;
         border:none;
-        border-bottom: 1px solid rgb(66, 64, 64);
+        border-bottom: 2px solid rgb(110, 110, 110);
         cursor: pointer;
 
+        &:focus, textarea:focus, select:focus{
+            outline: none;
+        }
         &:hover {
             border-bottom: 2px solid rgb(0, 0, 0);
         }
