--- a/src/assets/sass/common/form.scss
+++ b/src/assets/sass/common/form.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: 48px;
+    @media (max-width:$tablet) {
+        width: 100%;
+    }
 
     &__modal {
         max-width: 542px;
