--- a/src/assets/sass/pages/blog.scss
+++ b/src/assets/sass/pages/blog.scss
@@ -1,8 +1,10 @@
 // blog start
 
 .blog{
+    padding: 130px;
     @media(max-width:$tablet){
         padding: 64px 16px;
+        
     }
 
     
@@ -11,7 +13,6 @@
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        
         
     }
       
