--- a/src/assets/sass/pages/contact.scss
+++ b/src/assets/sass/pages/contact.scss
@@ -76,6 +76,9 @@
     &__modal{
         display: flex;
         width: 50%;
+        @media (max-width:$tablet) {
+            width: 100%;
+        }
     }
 
     &__form{
