--- a/src/assets/sass/pages/works.scss
+++ b/src/assets/sass/pages/works.scss
@@ -1,10 +1,9 @@
 // top start
 
 .top{
-    margin-top: 130px;
+    padding: 130px;
     @media (max-width: $tablet) {
-        padding: 0px 16px;
-        margin-top: 0;
+        padding: 64px 16px;
     }
 
 
@@ -39,7 +38,7 @@
 
 
 .works{
-    margin-top: 120px;
+    padding: 120px;
     @media (max-width: $tablet) {
         padding: 0px 16px;
     }
